<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamsActivity">


    <Spinner
        android:id="@+id/checkResultSpinner"

        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="50dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390dp"
        android:layout_height="580dp"
        android:layout_margin="20dp"

        android:background="#e3f2fd"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkResultSpinner"
        app:layout_constraintVertical_bias="0.392">


        <ImageView
            android:id="@+id/studentImageView"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_profile" />


        <TextView
            android:id="@+id/admTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:text="@string/admission_no"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/admNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@+id/admTextView"
            android:text="4060"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/admTextView"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:text="@string/name"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/studentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/admNo"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/nameTextView"
            android:text="Zulfa Hamadi Syombio"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/classTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTextView"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:text="@string/Student_class"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/studentclass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentName"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/classTextView"
            android:text="4B"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="280dp"
            android:layout_height="1dp"
            android:layout_below="@+id/studentclass"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:background="#90caf9" />

        <TextView
            android:id="@+id/mathstextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentclass"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:text="@string/maths"
            android:textColor="@color/textColor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/maths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentclass"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@+id/mathstextview"
            android:text="89%"
            android:textColor="@color/textColor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/engtextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mathstextview"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:text="English:"
            android:textColor="@color/textColor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/maths"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/engtextview"
            android:text="69%"
            android:textColor="@color/textColor"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/kiswtextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/engtextview"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:text="Kiswahili: "
            android:textColor="@color/textColor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/kisw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eng"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/kiswtextview"
            android:text="56%"
            android:textColor="@color/textColor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kiswtextview"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:text="@string/total"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kisw"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@+id/totalTextView"
            android:text="214"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/meanTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/totalTextView"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:text="@string/mean_grade"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/meanTextView"
            android:text="B+"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/positionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/meanTextView"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/studentImageView"
            android:text="Position:"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mean"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/positionTextView"
            android:text="2"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />


    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
